--- a/css/default.css
+++ b/css/default.css
@@ -4,7 +4,8 @@ html {
 
 body {
   font-size: 1.6rem;
-  color: #000;
+  color: #EADCD2;
+  background-color: #212026;
 }
 
 header {
@@ -24,11 +25,13 @@ nav a {
 }
 
 footer {
-  margin-top: 3rem;
-  padding: 1.2rem 0;
-  border-top: 0.2rem solid #000;
-  font-size: 1.2rem;
-  color: #555;
+  position: fixed;
+  bottom: 0;
+  left: 0;
+  width: 100%;
+  height: 50px;
+  background-color: #141316;
+  color: 505256;
 }
 
 h1 {
