--- a/templates/home.html
+++ b/templates/home.html
@@ -4,12 +4,13 @@
         <meta charset="utf-8">
         <meta http-equiv="x-ua-compatible" content="ie=edge">
         <meta name="viewport" content="width=device-width, initial-scale=1">
-        <title>Catbus: $title$</title>
-        <link rel="stylesheet" href="/css/default.css" />
+        <title>Catbus: What is Parth Up To?</title>
+        <link rel="stylesheet" href="/css/home.css" />
+        <link href='https://fonts.googleapis.com/css?family=Vollkorn SC' rel='stylesheet'> 
+        <link href='https://fonts.googleapis.com/css?family=Vollkorn' rel='stylesheet'>
     </head>
     <body>
         <main role="main">
-            <h1>$title$</h1>
             $body$
         </main>
 
