--- a/templates/home.html
+++ b/templates/home.html
@@ -22,6 +22,9 @@
                     <img src="/images/Lights.png" class="light"> 
                 </div>
             </a>
+            <div class="hakyll">
+                Powered by <a class="hakylink"; href="https://jaspervdj.be/hakyll/">hakyll</a>.
+            </div>
        </footer>
     </body>
 </html>
