--- a/css/default.css
+++ b/css/default.css
@@ -4,14 +4,93 @@ html {
 
 body {
   font-size: 1.6rem;
+  font-family: 'Vollkorn';
   color: #EADCD2;
   background-color: #212026;
   text-align: justify;
 }
 
+.clear { 
+  clear: both; 
+  height: 60px; 
+}
+
+a:link {
+  color: #EADCD2;
+}
+
+a:visited {
+  color: #b6aaa0;
+}
+
+a:hover { 
+  color: #fff;
+}
+
+.title {
+  text-align: left;
+  font-family: 'Vollkorn SC';
+  font-size: 5rem;
+  margin-right: 10pt;
+  margin-bottom: -10pt;
+  margin-top: 0pt;
+}
+
+.lastmodified {
+  font-size: 1.5rem;
+  font-family: 'Vollkorn';
+  font-style: italic;
+  text-align: left;
+  margin-top: -10pt;
+  color: #eadcd23d;
+}
 footer {
   height: 50px;
   background-color: #141316;
+}
+
+.hakyll {
+  position: absolute;
+  right: 10px;
+  bottom: 10px;
+  color: #2c2b31;
+}
+
+.hakyll a:link {
+  color: #575561;
+  text-decoration: none;
+}
+
+.hakyll a:hover {
+  color: #EADCD2;
+  text-decoration: none;
+}
+
+.hakyll a:visited {
+  color: #575561;
+  text-decoration: none;
+}
+
+.catbusfooter {
+  position: absolute;
+  left: 10px;
+  bottom: 10px;
+  color: #2c2b31;
+}
+
+.catbusfooter a:link {
+  color: #575561;
+  text-decoration: none;
+}
+
+.catbusfooter a:hover {
+  color: #EADCD2;
+  text-decoration: none;
+}
+
+.catbusfooter a:visited {
+  color: #575561;
+  text-decoration: none;
 }
 
 .busStop { 
@@ -53,7 +132,7 @@ article .header {
   color: #555;
 }
 
-@media (max-width: 999px) {
+@media (max-width: 600px) {
   body {
     width: 90%;
     margin: 0;
@@ -77,7 +156,7 @@ article .header {
   }
 }
 
-@media (min-width: 1000px) {
+@media (min-width: 601px) {
   body {
     width: 60rem;
     margin: 0 auto;
@@ -97,5 +176,24 @@ article .header {
   }
   .light { 
     bottom: 40px; 
+  }
+}
+
+@media (max-height: 350pt) {
+  footer {
+    position: relative;
+    width: 111.11%;
+    top: 150px;
+    left: -5.55%;
+  }
+  .busStop { 
+    bottom: 45px; 
+  }
+  .eyes { 
+    bottom: 50px; 
+  }
+  .light { 
+    left: 0px; 
+    bottom: 50px; 
   }
 }
