--- a/css/home.css
+++ b/css/home.css
@@ -12,14 +12,17 @@ body {
 
 a:link {
   color: #EADCD2;
+  text-decoration: none;
 }
 
 a:visited {
   color: #b6aaa0;
+  text-decoration: none;
 }
 
 a:hover { 
   color: #fff;
+  text-decoration: none;
 }
 
 footer {
@@ -35,7 +38,7 @@ footer {
   position: absolute;
   right: 0px; 
   bottom: 45px; 
-  width: 45%;
+  width: 35%;
   max-width: 800px;
 }
 .eyes { 
@@ -43,7 +46,7 @@ footer {
   bottom: 40px; 
   right: 0px; 
   left: 0px; 
-  width: 35%;
+  width: 25%;
   max-width: 600px;
 }
 .light { 
@@ -52,12 +55,35 @@ footer {
   opacity: 0;
   z-index: -1;
   left: 0px; 
-  width: 35%;
+  width: 25%;
   max-width: 500px;
 }
 .homebox:hover .light {
   opacity: 20%;
 }
+
+.hakyll {
+  position: absolute;
+  right: 10px;
+  bottom: 10px;
+  color: #2c2b31;
+}
+
+.hakyll a:link {
+  color: #575561;
+  text-decoration: none;
+}
+
+.hakyll a:hover {
+  color: #EADCD2;
+  text-decoration: none;
+}
+
+.hakyll a:visited {
+  color: #575561;
+  text-decoration: none;
+}
+
 
 h1 {
   font-size: 2.4rem;
@@ -78,14 +104,15 @@ h2 {
 }
 
 .lastmodified {
-  font-size: 1.6rem;
+  font-size: 1.5rem;
   font-family: 'Vollkorn';
   font-style: italic;
   text-align: left;
   margin-top: -10pt;
+  color: #eadcd23d;
 }
 
-@media (max-width: 999px) {
+@media (max-width: 600pt) {
   body {
     width: 90%;
     margin: 0;
@@ -93,10 +120,29 @@ h2 {
   }
 }
 
-@media (min-width: 1000px) {
+@media (min-width: 601pt) {
   body {
     width: 60rem;
     margin: 0 auto;
     padding: 0;
+  }
+}
+
+@media (max-height: 350pt) {
+  footer {
+    position: relative;
+    width: 111.11%;
+    top: 150px;
+    left: -5.55%;
+  }
+  .busStop { 
+    bottom: 45px; 
+  }
+  .eyes { 
+    bottom: 50px; 
+  }
+  .light { 
+    left: 0px; 
+    bottom: 50px; 
   }
 }
