--- a/templates/home.html
+++ b/templates/home.html
@@ -7,7 +7,7 @@
         <title>Catbus: What is Parth Up To?</title>
         <link rel="stylesheet" href="/css/home.css" />
         <link href='https://fonts.googleapis.com/css?family=Vollkorn SC' rel='stylesheet'> 
-        <link href='https://fonts.googleapis.com/css?family=Vollkorn' rel='stylesheet'>
+        <link href='https://fonts.googleapis.com/css?family=Castoro' rel='stylesheet'>
     </head>
     <body>
         <main role="main">
