--- a/css/home.css
+++ b/css/home.css
@@ -4,7 +4,7 @@ html {
 
 body {
   font-size: 1.6rem;
-  font-family: 'Vollkorn';
+  font-family: 'Castoro';
   color: #EADCD2;
   background-color: #212026;
   text-align: justify;
