--- a/templates/default.html
+++ b/templates/default.html
@@ -9,10 +9,13 @@
         <link href='https://fonts.googleapis.com/css?family=Vollkorn SC' rel='stylesheet'> 
         <link href='https://fonts.googleapis.com/css?family=Castoro' rel='stylesheet'>
     </head>
+
     <body>
         <main role="main">
             <div class="title">
-                $title$
+                <div id="heading">
+                    $title$
+                </div>
                 $if(date)$
                 $else$
                     <p class="lastmodified", id="last">
@@ -25,27 +28,13 @@
                       lastMod = document.getElementById("last");
                       date = new Date(document.lastModified)
                       lastMod.innerText = "Last updated on " + date.toDateString() + ".";
-                    </script>
+                   </script>
                 $endif$
             </div>
             $body$
         </main>
-        <div class="clear"></div>
-        <footer> 
-            <img src="/images/BusStop.png" class="busStop"> 
-            <a href="/index.html">
-                <div class="homebox">
-                    <img src="/images/Logo.png" class="eyes"> 
 
-                    <img src="/images/Lights.png" class="light"> 
-                </div>
-            </a>
-            <div class="hakyll">
-                Powered by <a href="https://jaspervdj.be/hakyll/">hakyll</a>.
-            </div>
-            <div class="catbusfooter">
-                <a href="./index.html">Catbus /</a> $title$
-            </div>
-       </footer>
+        <div class="clear"></div>
+        $partial("templates/footer.html")$
     </body>
 </html>
