--- a/css/default.css
+++ b/css/default.css
@@ -36,6 +36,16 @@ a:hover {
   margin-top: 0pt;
 }
 
+.smalltitle {
+  text-align: left;
+  float: left;
+  font-family: 'Vollkorn SC';
+  font-size: 2.7rem;
+  margin-right: 10pt;
+  margin-bottom: -10pt;
+  margin-top: 4pt;
+}
+
 .lastmodified {
   font-size: 1.5rem;
   font-family: 'Vollkorn';
@@ -43,6 +53,20 @@ a:hover {
   text-align: left;
   margin-top: -10pt;
   color: #eadcd23d;
+}
+
+.lastmodified a:link {
+  color: #eadcd23d;
+  text-decoration: none;
+  
+}
+.lastmodified a:hover {
+  color: #eadcd28a;
+  text-decoration: none;
+}
+.lastmodified a:visited {
+  color: #eadcd23d;
+  text-decoration: none;
 }
 footer {
   height: 50px;
@@ -131,6 +155,47 @@ article .header {
   font-style: italic;
   color: #555;
 }
+
+/* Dropdown Button */
+.dropbtn {
+  border: none;
+}
+
+/* The container <div> - needed to position the dropdown content */
+.dropdown {
+  position: relative;
+  display: inline-block;
+}
+
+/* Dropdown Content (Hidden by Default) */
+.dropdown-content {
+  margin-top: -15px;
+  margin-left: -5px;
+  display: none;
+  position: absolute;
+  background-color: #212026;
+  min-width: 160px;
+  box-shadow: 0px 8px 16px 0px rgba(0, 0, 0, 0.527);
+  z-index: 1;
+}
+
+/* Links inside the dropdown */
+.dropdown-content a {
+  color: #eadcd2;
+  text-decoration: none;
+  display: block;
+  font-size: 2rem;
+  padding-left: 5%;
+}
+
+/* Change color of dropdown links on hover */
+.dropdown-content a:hover {background-color: #19191d;}
+
+/* Show the dropdown menu on hover */
+.dropdown:hover .dropdown-content {display: block;}
+
+/* Change the background color of the dropdown button when the dropdown content is shown */
+.dropdown:hover .dropbtn {color: #fff;}
 
 @media (max-width: 600px) {
   body {
