--- a/templates/home.html
+++ b/templates/home.html
@@ -5,26 +5,16 @@
         <meta http-equiv="x-ua-compatible" content="ie=edge">
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <title>Catbus: What is Parth Up To?</title>
-        <link rel="stylesheet" href="/css/home.css" />
+        <link rel="stylesheet" href="/css/home.css"/>
         <link href='https://fonts.googleapis.com/css?family=Vollkorn SC' rel='stylesheet'> 
         <link href='https://fonts.googleapis.com/css?family=Castoro' rel='stylesheet'>
     </head>
+
     <body>
         <main role="main">
             $body$
         </main>
 
-        <footer> 
-            <img src="/images/BusStop.png" class="busStop"> 
-            <a href="/index.html">
-                <div class="homebox">
-                    <img src="/images/Logo.png" class="eyes"> 
-                    <img src="/images/Lights.png" class="light"> 
-                </div>
-            </a>
-            <div class="hakyll">
-                Powered by <a class="hakylink"; href="https://jaspervdj.be/hakyll/">hakyll</a>.
-            </div>
-       </footer>
+        $partial("templates/footer.html")$
     </body>
 </html>
