mobile friendly attempt 2

--- a/templates/default.html
+++ b/templates/default.html
@@ -11,6 +11,9 @@
     </head>
 
     <body>
+        <script language="Javascript">
+            document.addEventListener("touchstart", function() {}, true);
+        </script>
         <main role="main">
             <div class="title">
                 <div id="heading">
