--- a/templates/default.html
+++ b/templates/default.html
@@ -8,12 +8,12 @@
         <link rel="stylesheet" href="/css/default.css" />
         <link href='https://fonts.googleapis.com/css?family=Vollkorn SC' rel='stylesheet'> 
         <link href='https://fonts.googleapis.com/css?family=Castoro' rel='stylesheet'>
+
+        <script src="https://polyfill.io/v3/polyfill.min.js?features=es6"></script>
+        <script id="MathJax-script" async src="https://cdn.jsdelivr.net/npm/mathjax@3/es5/tex-mml-chtml.js"></script>
     </head>
 
     <body>
-        <script language="Javascript">
-            document.addEventListener("touchstart", function() {}, true);
-        </script>
         <main role="main">
             <div class="title">
                 <div id="heading">
