fixed home page links

--- a/templates/home.html
+++ b/templates/home.html
@@ -8,6 +8,7 @@
         <link rel="stylesheet" href="/css/home.css"/>
         <link href='https://fonts.googleapis.com/css?family=Vollkorn SC' rel='stylesheet'> 
         <link href='https://fonts.googleapis.com/css?family=Castoro' rel='stylesheet'>
+        <script src="https://kit.fontawesome.com/8ac6d30ce3.js" crossorigin="anonymous"></script>
     </head>
 
     <body>
