--- a/templates/default.html
+++ b/templates/default.html
@@ -7,7 +7,7 @@
         <title>Catbus: $title$</title>
         <link rel="stylesheet" href="/css/default.css" />
         <link href='https://fonts.googleapis.com/css?family=Vollkorn SC' rel='stylesheet'> 
-        <link href='https://fonts.googleapis.com/css?family=Castoro' rel='stylesheet'>
+        <link href='https://fonts.googleapis.com/css?family=Caudex' rel='stylesheet'>
 
         <script src="https://polyfill.io/v3/polyfill.min.js?features=es6"></script>
         <script id="MathJax-script" async src="https://cdn.jsdelivr.net/npm/mathjax@3/es5/tex-mml-chtml.js"></script>
@@ -15,25 +15,22 @@
 
     <body>
         <main role="main">
-            <div class="title">
+            <div class="title" $if(date)$ $else$ style="text-align: left;" $endif$>
                 <div id="heading">
                     $title$
                 </div>
+            </div>
                 $if(date)$
                 $else$
                     <p class="lastmodified", id="last">
                     Last modified on:
                     </p>
-
-                <div class="clear" style="height: 10px;"></div>
-
                    <script language="Javascript">
                       lastMod = document.getElementById("last");
                       date = new Date(document.lastModified)
                       lastMod.innerText = "Last updated on " + date.toDateString() + ".";
                    </script>
                 $endif$
-            </div>
             $body$
         </main>
 
