--- a/templates/post-list.html
+++ b/templates/post-list.html
@@ -1,5 +1,12 @@
-Things I have tried to learn properly at some point-- I find writing explanatory articles is the best way to internalise the concepts. 
+<head>
+    <style>
+        .teaser {
+            font-style: normal;
+        }
+    </style>
+</head>
 
+<i>Over time, I have found that I learn best by explaining-- partly why this blog exists. These articles are on things I have tried to learn properly at some point, through coursework or otherwise. The articles present the subject in a form that made most sense to me, and are not guaranteed to be accurate representations of the topic. Importantly, I ask why any particular objects are natural things to think about, so contrary to a typical mathematical text, often the focus is on definitions rather than results. Nonetheless, there should be enough content in each article to start you off on a reading quest of your own.</i>
 <div id="taglist" class="dropdown"> $allTags$ </div>
 
 <script>
