--- a/templates/default.html
+++ b/templates/default.html
@@ -20,7 +20,7 @@
                     $title$
                 </div>
             </div>
-                $if(date)$
+                $if(author)$
                 $else$
                     <p class="lastmodified", id="last">
                     Last modified on:
