fixed some mobile display

--- a/css/default.css
+++ b/css/default.css
@@ -14,6 +14,10 @@ sc {
   font-family: 'Vollkorn SC'
 }
 
+.hiddenifbig {
+    display: none;
+}
+
 .block { 
   border-left: 4px solid #eadcd2;
   padding-left: 10px;
@@ -84,7 +88,7 @@ a:hover {
   float: left;
   font-family: 'Vollkorn SC';
   font-size: 2.7rem;
-  margin-right: 10pt;
+  margin-right: 15pt;
   margin-bottom: -10pt;
   margin-top: 4pt;
 }
@@ -262,6 +266,12 @@ article .header {
     left: 0px; 
     bottom: 50px; 
   }
+  .smalltitle {
+      font-size: 2.3rem;
+  }
+  .hiddenifbig {
+      display: block;
+  }
 }
 
 @media (min-width: 601px) {
@@ -287,7 +297,7 @@ article .header {
   }
 }
 
-@media (max-height: 350pt) {
+@media (max-height: 500pt) {
   footer {
     position: relative;
     width: 111.11%;
