--- a/templates/gist-list.html
+++ b/templates/gist-list.html
@@ -1,4 +1,4 @@
-All the things I have something to say about, but not enough to write an article. These range from equivalents of margin-scribbles to revision notes, small tricks I have picked here and there, and some original thoughts.
+Things I have something to say about, but not enough to write an article. These range from equivalents of margin-scribbles to revision notes, small tricks I have picked here and there, and some original thoughts.
 
 <div id="taglist" class="dropdown"> $allTags$ </div>
 
@@ -27,6 +27,8 @@ $title$
 $date$ ($tags$)
 </p>
 </div>
+<div class="hiddenifbig" style="width: 100%; height: 40px"> </div>
+<p> 
 $teaser$
 <hr>
 $endfor$
