--- a/templates/post-list.html
+++ b/templates/post-list.html
@@ -34,6 +34,7 @@ $title$
 $date$ ($tags$)
 </p>
 </div>
+<div class="hiddenifbig" style="width: 100%; height: 40px"> </div>
 $teaser$
 <div class="lastmodified" style="display: flex;">
     <a href="$url$">read more...</a>
