--- a/css/default.css
+++ b/css/default.css
@@ -78,7 +78,8 @@ a:hover {
 .title {
   text-align: center;
   font-family: 'Vollkorn SC';
-  font-size: 4.5rem;
+  font-size: 4rem;
+  line-height: 1em;
   margin-right: 10pt;
   margin-bottom: 0pt;
   margin-top: 20pt;
@@ -90,8 +91,8 @@ a:hover {
   font-family: 'Vollkorn SC';
   font-size: 2.7rem;
   margin-right: 15pt;
-  margin-bottom: -10pt;
-  margin-top: 4pt;
+  margin-bottom: -20pt;
+  margin-top: 10pt;
 }
 
 .lastmodified {
@@ -216,13 +217,13 @@ article .header {
 
 /* Dropdown Content (Hidden by Default) */
 .dropdown-content {
-  margin-top: -15px;
+  margin-top: -5px;
   margin-left: -5px;
   display: none;
   position: absolute;
   background-color: #212026;
   min-width: 200px;
-  box-shadow: 0px 8px 16px 0px rgba(0, 0, 0, 0.527);
+  box-shadow: 0px 12px 20px 0px rgba(0, 0, 0, 0.9);
   z-index: 1;
 }
 
@@ -237,7 +238,7 @@ article .header {
 }
 
 /* Change color of dropdown links on hover */
-.dropdown-content a:hover {background-color: #19191d;}
+.dropdown-content a:hover {background-color: #101010;}
 
 /* Show the dropdown menu on hover */
 .dropdown:hover .dropdown-content {display: block;}
