--- a/templates/post-list.html
+++ b/templates/post-list.html
@@ -6,7 +6,7 @@
     </style>
 </head>
 
-<i>Over time, I have found that I learn best by explaining-- partly why this blog exists. These articles are on things I have tried to learn properly at some point, through coursework or otherwise. The articles present the subject in a form that made most sense to me, and are not guaranteed to be accurate representations of the topic. Importantly, I ask why any particular objects are natural things to think about, so contrary to a typical mathematical text, often the focus is on definitions rather than results. Nonetheless, there should be enough content in each article to start you off on a reading quest of your own.</i>
+<i>This is my semi-active blog, each article is a by-product of me attempting to understand some mathematics. Most articles, hence, are just rehashes of existing literature and my only original contributions are mistakes which I apologise for in advance. I tend to reorder material in a way that seems most 'natural' to me at the time, so at best they can hint you towards an alternate approach to the subject.</i>
 <div id="taglist" class="dropdown"> $allTags$ </div>
 
 <script>
