--- a/templates/gist-list.html
+++ b/templates/gist-list.html
@@ -1,4 +1,5 @@
-Things I have something to say about, but not enough to write an article. These range from equivalents of margin-scribbles to revision notes, small tricks I have picked here and there, and some original thoughts.
+This is a list of short stand-alone results, (counter) examples, and tricks
+that I have picked up here and there.
 
 <div id="taglist" class="dropdown"> $allTags$ </div>
 
