some css change

--- a/templates/post-list.html
+++ b/templates/post-list.html
@@ -6,7 +6,7 @@
     </style>
 </head>
 
-<i>This is my semi-active blog, each article is a by-product of me attempting to understand some mathematics. Most articles, hence, are just rehashes of existing literature and my only original contributions are mistakes which I apologise for in advance. I tend to reorder material in a way that seems most 'natural' to me at the time, so at best they can hint you towards an alternate approach to the subject.</i>
+<i>This is my semi active blog, each article is a by-product of me attempting to understand some mathematics. Most articles, hence, are just rehashes of existing literature and most original contributions are either through mistakes which I apologise for in advance, or through non-traditional reordering of topics to suit my taste. It can however provide a starting point to some of the content, or an alternate perspective if you're already familiar with the material.</i>
 <div id="taglist" class="dropdown"> $allTags$ </div>
 
 <script>
