--- a/css/default.css
+++ b/css/default.css
@@ -222,13 +222,14 @@ article .header {
   display: none;
   position: absolute;
   background-color: #212026;
-  min-width: 200px;
+  min-width: 300px;
   box-shadow: 0px 12px 20px 0px rgba(0, 0, 0, 0.9);
   z-index: 1;
 }
 
 /* Links inside the dropdown */
 .dropdown-content a {
+  white-space: nowrap;
   color: #eadcd2;
   text-decoration: none;
   display: block;
