hide elements on smaller screens

--- a/css/default.css
+++ b/css/default.css
@@ -275,6 +275,9 @@ article .header {
   .hiddenifbig {
       display: block;
   }
+  .catbusfooter {
+      visibility: hidden;
+  }
 }
 
 @media (min-width: 601px) {
