--- a/css/home.css
+++ b/css/home.css
@@ -142,7 +142,10 @@ h2 {
   body {
     width: 90%;
     margin: 0;
-    padding: 0 5%;
+    padding-left: 5%;
+    padding-right: 0;
+    padding-top: 0;
+    padding-bottom: 200px;
   }
   .title {
     font-size: 5rem;
