--- a/templates/home.html
+++ b/templates/home.html
@@ -7,6 +7,7 @@
         <title>Catbus: What is Parth Up To?</title>
         <link rel="stylesheet" href="/css/home.css"/>
         <link href='https://fonts.googleapis.com/css?family=Vollkorn SC' rel='stylesheet'> 
+        <link href='https://fonts.googleapis.com/css?family=Hubballi' rel='stylesheet'>
         <link href='https://fonts.googleapis.com/css?family=Caudex' rel='stylesheet'>
         <script src="https://kit.fontawesome.com/8ac6d30ce3.js" crossorigin="anonymous"></script>
     </head>
