--- a/css/home.css
+++ b/css/home.css
@@ -171,7 +171,10 @@ h2 {
   body {
     width: 60rem;
     margin: 0 auto;
-    padding: 0;
+    padding-top: 0;
+    padding-left: 0;
+    padding-right: 0;
+    padding-bottom: 200px;
   }
   .title {
     font-size: 8rem;
