More readable links

--- a/css/default.css
+++ b/css/default.css
@@ -14,17 +14,23 @@ body {
 
 a:link {
   color: #EADCD2;
-  text-decoration: none;
+  text-decoration: underline;
+  text-decoration-style: dotted;
+  text-decoration-color: #616066;
 }
 
 a:visited {
   color: #b6aaa0;
-  text-decoration: none;
+  text-decoration: underline;
+  text-decoration-style: dotted;
+  text-decoration-color: #616066;
 }
 
 a:hover { 
-  color: #fff;
-  text-decoration: none;
+  text-shadow: 0px 0px 1px white;
+  text-decoration: underline;
+  text-decoration-style: dotted;
+  text-decoration-color: #616066;
 }
 
 
