--- a/css/home.css
+++ b/css/home.css
@@ -11,9 +11,8 @@ body {
   text-align: justify;
 }
 
-sc {
-  font-family: 'Vollkorn SC';
-}
+sc {font-family: 'Vollkorn SC';}
+
 .catbusfooter {
   position: absolute;
   left: 10px;
@@ -44,15 +43,16 @@ a:link {
 }
 
 a:visited {
-  color: #b6aaa0;
+  color:  #EADCD2;
   text-decoration-style: dotted;
-  text-decoration-color: #616066
+  text-decoration-color: #616066;
 }
 
 a:hover { 
-  text-shadow: 0px 0px 1px white;
+  color: white;
+  text-shadow: 0px 0px 0.5px white;
   text-decoration-style: dotted;
-  text-decoration-color: #616066
+  text-decoration-color: #616066;
 }
 
 footer {
@@ -115,13 +115,8 @@ footer {
 }
 
 
-h1 {
-  font-size: 2.4rem;
-}
-
-h2 {
-  font-size: 2rem;
-}
+h1 {font-size: 2.4rem;}
+h2 {font-size: 2rem;}
 
 .title {
   text-align: center;
@@ -151,24 +146,12 @@ h2 {
     padding-top: 0;
     padding-bottom: 200px;
   }
-  .title {
-    font-size: 5rem;
-  }
-  .lastmodified{
-      font-size: 1.2rem;
-  }
-  .catbusfooter{
-      visibility: hidden;
-  }
-  .eyes{
-      visibility: hidden;
-  }
-  .light{
-      visibility: hidden;
-  }
-  .busStop{
-      visibility: hidden;
-  }
+  .title {font-size: 5rem;}
+  .lastmodified{font-size: 1.2rem;}
+  .catbusfooter{visibility: hidden;}
+  .eyes{visibility: hidden;}
+  .light{visibility: hidden;}
+  .busStop{visibility: hidden;}
 }
 
 @media screen and (min-width: 601pt) {
@@ -180,9 +163,7 @@ h2 {
     padding-right: 0;
     padding-bottom: 200px;
   }
-  .title {
-    font-size: 8rem;
-  }
+  .title {font-size: 8rem;}
 }
 
 @media (max-height: 350pt) {
@@ -192,14 +173,7 @@ h2 {
     top: 150px;
     left: -5.55%;
   }
-  .busStop { 
-    bottom: 45px; 
-  }
-  .eyes { 
-    bottom: 50px; 
-  }
-  .light { 
-    left: 0px; 
-    bottom: 50px; 
-  }
+  .busStop {bottom: 45px;}
+  .eyes {bottom: 50px;}
+  .light {left: 0px; bottom: 50px;}
 }
