--- a/templates/home.html
+++ b/templates/home.html
@@ -6,6 +6,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <title>Catbus: What is Parth Up To?</title>
         <link rel="stylesheet" href="/css/home.css"/>
+        <link rel="stylesheet" href="/css/responsive-tabs.css"/>
         <link href='https://fonts.googleapis.com/css?family=Vollkorn SC' rel='stylesheet'> 
         <link href='https://fonts.googleapis.com/css?family=Hubballi' rel='stylesheet'>
         <link href='https://fonts.googleapis.com/css?family=Caudex' rel='stylesheet'>
