--- a/css/responsive-tabs.css
+++ b/css/responsive-tabs.css
@@ -68,7 +68,7 @@ label.panel-label:hover {
   }
 
   #nav-ctrl:checked ~ #tabs-list {
-      box-shadow: 0px 12px 20px 0px rgba(0, 0, 0, 0.9);
+      box-shadow: 0px 5px 10px 0px rgba(0, 0, 0, 0.9);
   }
 
   #nav-ctrl:checked ~ #tabs-list #li-for-panel-1 {
@@ -241,14 +241,10 @@ label.panel-label:hover {
   border: 0;
   margin: 0;
   overflow: visible; }
-  .hamburger:hover {
-    opacity: 0.7; }
-  .hamburger.is-active:hover {
-    opacity: 0.7; }
   .hamburger.is-active .hamburger-inner,
   .hamburger.is-active .hamburger-inner::before,
   .hamburger.is-active .hamburger-inner::after {
-    background-color: white; }
+    background-color: #EADCD2; }
 
 .hamburger-box {
   width: 40px;
@@ -263,7 +259,7 @@ label.panel-label:hover {
   .hamburger-inner, .hamburger-inner::before, .hamburger-inner::after {
     width: 32px;
     height: 3.2px;
-    background-color: white;
+    background-color: #EADCD2;
     border-radius: 3.2px;
     position: absolute;
     transition-property: transform;
