--- a/templates/footer.html
+++ b/templates/footer.html
@@ -1,10 +1,10 @@
 <footer> 
-     <img src="/images/BusStop.png" class="busStop"> 
+     <img src="/images/footer-busstop.png" class="busStop"> 
      <a href="/index.html">
          <div class="homebox">
-             <img src="/images/Logo.png" class="eyes"> 
+             <img src="/images/footer-logo.png" class="eyes"> 
 
-             <img src="/images/Lights.png" class="light"> 
+             <img src="/images/footer-lights.png" class="light"> 
          </div>
      </a>
      <div class="hakyll">
