--- a/templates/home.html
+++ b/templates/home.html
@@ -11,7 +11,8 @@
         <link href='https://fonts.googleapis.com/css?family=Vollkorn SC' rel='stylesheet'> 
         <link href='https://fonts.googleapis.com/css?family=Hubballi' rel='stylesheet'>
         <link href='https://fonts.googleapis.com/css?family=Caudex' rel='stylesheet'>
-        <script src="https://kit.fontawesome.com/8ac6d30ce3.js" crossorigin="anonymous"></script>
+        <link href='https://fonts.googleapis.com/css?family=Fira Mono' rel='stylesheet'>
+        <script src="https://kit.fontawesome.com/8ac6d30ce3.js" crossorigin="anonymous"></script> 
     </head>
 
     <body>
@@ -19,6 +20,6 @@
             $body$
         </main>
 
-        $partial("templates/footer.html")$
+        $partial("templates/footer.html")$ 
     </body>
 </html>
