--- a/templates/home.html
+++ b/templates/home.html
@@ -4,15 +4,16 @@
         <meta charset="utf-8">
         <meta http-equiv="x-ua-compatible" content="ie=edge">
         <meta name="viewport" content="width=device-width, initial-scale=1">
-        <title>Catbus: What is Parth Up To?</title> 
+        <title>Catbus: What is Parth Up To?</title>
         <link rel="icon" type="image/x-icon" href="/images/catbus-logo.png">
         <link rel="stylesheet" href="/css/home.css"/>
         <link rel="stylesheet" href="/css/responsive-tabs.css"/>
-        <link href='https://fonts.googleapis.com/css?family=Vollkorn SC' rel='stylesheet'> 
+        <link href='https://fonts.googleapis.com/css?family=Vollkorn SC' rel='stylesheet'>
         <link href='https://fonts.googleapis.com/css?family=Hubballi' rel='stylesheet'>
         <link href='https://fonts.googleapis.com/css?family=Caudex' rel='stylesheet'>
         <link href='https://fonts.googleapis.com/css?family=Fira Mono' rel='stylesheet'>
-        <script src="https://kit.fontawesome.com/8ac6d30ce3.js" crossorigin="anonymous"></script> 
+        <script src="https://kit.fontawesome.com/8ac6d30ce3.js" crossorigin="anonymous"></script>
+        <meta name="google-site-verification" content="8HaSWOVfDvnz1-z4iaOP5LiSgpqj1KPmeoNZCrhGzzo" />
     </head>
 
     <body>
@@ -20,6 +21,6 @@
             $body$
         </main>
 
-        $partial("templates/footer.html")$ 
+        $partial("templates/footer.html")$
     </body>
 </html>
