--- a/css/home.css
+++ b/css/home.css
@@ -11,6 +11,17 @@ body {
   text-align: justify;
 }
 
+.dropthis {
+  font-size: 4.8rem;
+  line-height: 4.8rem;
+  float: left;
+  margin-right: 1rem;
+}
+
+.aestheticGap {
+  height: 100px;
+}
+
 sc {font-family: 'Vollkorn SC';}
 
 .homepage-list {
@@ -55,7 +66,7 @@ a:visited {
   text-decoration-color: #616066;
 }
 
-a:hover { 
+a:hover {
   color: white;
   text-shadow: 0px 0px 0.5px white;
   text-decoration-style: dotted;
@@ -71,27 +82,27 @@ footer {
   left: 0px;
 }
 
-.busStop { 
+.busStop {
   position: absolute;
-  right: 0px; 
-  bottom: 45px; 
+  right: 0px;
+  bottom: 45px;
   width: 25%;
   max-width: 800px;
 }
-.eyes { 
+.eyes {
   position: absolute;
-  bottom: 40px; 
-  right: 0px; 
-  left: 0px; 
+  bottom: 40px;
+  right: 0px;
+  left: 0px;
   width: 20%;
   max-width: 600px;
 }
-.light { 
+.light {
   position: absolute;
-  bottom: 40px; 
+  bottom: 40px;
   opacity: 0;
   z-index: -1;
-  left: 0px; 
+  left: 0px;
   width: 20%;
   max-width: 500px;
 }
@@ -136,8 +147,8 @@ h2 {font-size: 2rem;}
 }
 
 .lastmodified {
-  font-size: 1.5rem;
-  font-family: 'Vollkorn';
+  font-size: 1.3rem;
+  font-family: 'Caudex';
   font-style: italic;
   text-align: left;
   margin-top: 15pt;
@@ -192,6 +203,8 @@ pre code {
     padding-top: 0;
     padding-bottom: 200px;
   }
+  .dropthis {font-size: 4.8rem; line-height: 4.8rem}
+  .aestheticGap {height: 0px;}
   .title {font-size: 5rem;}
   .lastmodified{font-size: 1.2rem;}
   .catbusfooter{visibility: hidden;}
@@ -222,4 +235,8 @@ pre code {
   .busStop {bottom: 45px;}
   .eyes {bottom: 50px;}
   .light {left: 0px; bottom: 50px;}
+}
+
+::-webkit-scrollbar {
+  display: none;
 }
