--- a/css/default.css
+++ b/css/default.css
@@ -279,6 +279,8 @@ article .header {
     padding-bottom: 200px;
   }
   footer {
+    visibility: hidden;
+    display: none;
     position: fixed;
     width: 100.5%;
     bottom: 0px;
